Flowmini/flowmini_v23_token_tree_bridge/examples/fail/bad_bool_init.flow
program bad_bool_init

main {
    flag : Bool(1)
}
